--- a/templates/documents/create.html.twig
+++ b/templates/documents/create.html.twig
@@ -1,59 +1,129 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Détection de fichiers</h1>
+<div class="p-4 flex justify-between items-center">
+    <div class="flex justify-center items-center">
+        <svg width="27" height="27" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M31.25 14.1111V32.2778H4V14.1111L17.625 2L31.25 14.1111Z" stroke="#4B515D" stroke-width="2.14697" stroke-linejoin="round"/>
+            <path d="M4 17.139H31.25M9.29861 9.56958V32.2779M25.9514 9.56958V32.2779M14.5972 23.1946H20.6528V32.2779H14.5972V23.1946Z" stroke="#4B515D" stroke-width="2.14697" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+        <h1 class="text-2xl font-bold mt-1 ml-2">Ajout d'un rapport</h1>
+    </div>
 
-    <form action="" method="post">
-        <input type="hidden" name="page" value="documents">
-        <input type="hidden" name="action" value="uploadedToday">
+        <div class="flex justify-between items-center">
+            {% if session.username is defined %}
+            <div class="mr-2">
+                <p>{{session.username}}</p>
+                <div class="flex flex-row-reverse">
+                    {% if session.role_id == 1 %}
+                        <p class="text-zinc-600 text-xs font-light">Admin</p>
+                    {% else %}
+                        <p>Gestionnaire</p>
+                    {% endif %}
+                </div>
+            </div>
+            <img src="img/pfp.png" alt="" class="w-12 h-12 rounded-full">
+            {% endif %}
+        </div>
+</div>
+<main class="mt-2 w-full h-5/6 flex justify-center items-center">
 
-        <label for="folder">Sélectionnez un dossier :</label>
-        <select name="folder" id="folder">
-            <option value="ASS">ASS</option>
-            <option value="REP">REP</option>
-            <option value="GCE">GCE</option>
-            <option value="ANC">ANC</option>
-            <option value="Synthese">Synthese</option>
-            <option value="Analyse">Analyse</option>
-        </select>
+    <section class="w-1/3 p-8 border-solid border border-gray-200 bg-neutral-50 rounded-md shadow-lg">
 
-        <input type="submit" value="Détecter les fichiers">
-    </form>
+        <h1 class="text-lg font-bold mb-4">Détection de fichiers</h1>
+    
+        <form action="" method="post">
+            <input type="hidden" name="page" value="documents">
+            <input type="hidden" name="action" value="uploadedToday">
+    
+            <div class="flex flex-col justify-between items-start">
+        
+                <label for="folder" class="text-base font-semibold mb-4">Sélectionnez un dossier :</label>
 
-    <h2>Fichiers téléchargés aujourd'hui</h2>
+                <div>
+                    
+                    <select name="folder" id="folder" class="p-2 text-blue-600 rounded border border-blue-300">
+                        <option value="ASS">ASS</option>
+                        <option value="REP">REP</option>
+                        <option value="GCE">GCE</option>
+                        <option value="ANC">ANC</option>
+                        <option value="Synthese">Synthese</option>
+                        <option value="Analyse">Analyse</option>
+                    </select>
+            
+                    <input type="submit" value="Détecter" class=" mb-4 px-4 py-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-600 transition duration-200 cursor-pointer">
+                </div>
+           
+            </div>
+        </form>
+    
+        <h2 class="text-base font-semibold mb-4">Nouveaux fichiers</h2>
+    
+        {% if uploadedToday is empty %}
+            <p>Aucun fichier n'a été téléchargé aujourd'hui.</p>
+        {% else %}
+            <table class="w-full mb-4 text-sm text-left rtl:text-right">
+                <thead class=" text-xs uppercase bg-gray-200  ">
+                    <th scope="col" class="px-6 py-4">Nom</th>
+                    <th scope="col" class="px-6 py-4">Lien</th>
+                </thead>
+                <tbody>
+                    {% for file in uploadedToday %}
+                        <tr class="file-path odd:bg-neutral-50 even:bg-gray-100 " data-path="{{ file.path }}">
+                            <td class="px-6 py-4">{{ file.name }}</td>
+                            {# <td class="px-6 py-4">{{ file.path }}</td> #}
+                            <td class="px-6 py-4">
+                                <button id="select" class="edit-btn mr-2 px-4 py-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-600 transition duration-200 cursor-pointer">Selectionner</button>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% endif %}
 
-    {% if uploadedToday is empty %}
-        <p>Aucun fichier n'a été téléchargé aujourd'hui.</p>
-    {% else %}
-        <ul>
-            {% for file in uploadedToday %}
-                <li class="file-path" data-path="{{ file.path }}">{{ file.name }} <br> {{ file.path }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
 
-    <form action="controleur.php?page=documents&action=uploadedToday" method="post">
-        <h2>Chemin du fichier sélectionné</h2>
-        <input type="text" id="selectedFilePath" name="link" readonly>
 
-        <label for="type_doc">Type de document :</label>
-        <input type="text" id="type_doc" name="type_doc" readonly>
+            {# <ul>
+                {% for file in uploadedToday %}
+                    <li class="file-path" data-path="{{ file.path }}">{{ file.name }} <br> {{ file.path }}</li>
+                {% endfor %}
+            </ul> #}
+        
+    
+        <form action="controleur.php?page=documents&action=uploadedToday" method="post">
+            
+            <input type="hidden" id="selectedFilePath" name="link"   readonly>
+    
+            <label for="type_doc" hidden >Type de document :</label>
+            <input type="hidden" type="text" id="type_doc" name="type_doc"  readonly>
+            
+            <div class="flex flex-col mb-4 items-start">
+                <label for="titre" class="text-base font-semibold mb-2" >Titre du document :</label>
+                <input type="text" id="titre" name="titre" class="p-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200">
+            </div>
+    
+            <input type="hidden" name="date_doc" value="{{ 'now'|date('Y-m-d') }}">
+            
+            <div class="flex justify-between">
+                <div class="flex flex-col items-start">
+                    <label for="communeSearch" class="text-base font-semibold mb-2">Recherchez une commune :</label>
+                    <input type="text" id="communeSearch" class="p-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-300 transition duration-200">
+                    <button type="button" id="addCommune" class=" my-4 px-4 py-2 text-blue-600 rounded hover:bg-blue-50 border border-blue-600 transition duration-200 cursor-pointer">Ajouter la commune</button>
+                </div>
 
-        <label for="titre">Titre du document :</label>
-        <input type="text" id="titre" name="titre">
+                <div class="flex flex-col">
+                    <h2>Communes sélectionnées</h2>
+                    <ul id="selectedCommunes"></ul>
+                </div>
+    
+            </div>
 
-        <input type="hidden" name="date_doc" value="{{ 'now'|date('Y-m-d') }}">
+            <input type="submit" id="addDocument" value="Ajouter le document" class=" px-4 py-2 text-green-600 rounded hover:bg-green-50 border border-green-600 transition duration-200 cursor-pointer">
+    
+        </form>
+    </section>
 
-        <input type="submit" id="addDocument" value="Ajouter le document">
-
-        <label for="communeSearch">Recherchez une commune :</label>
-        <input type="text" id="communeSearch">
-
-        <button type="button" id="addCommune">Ajouter la commune</button>
-
-        <h2>Communes sélectionnées</h2>
-        <ul id="selectedCommunes"></ul>
-    </form>
+</main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
@@ -114,6 +184,22 @@
                 document.getElementById('folder').value = folder;
                 document.getElementById('type_doc').value = type_doc;
             }
+        });
+
+        var selec = document.getElementById("select")
+
+        selec.addEventListener("click", function(){
+            Toastify({
+                text: "Rapport bien séléctionné",
+                duration: 3000,
+                close: true,
+                gravity: "top", // `top` or `bottom`
+                position: "center", // `left`, `center` or `right`
+                style: {
+                  background: "linear-gradient(to right, #00b09b, #96c93d)",
+                },
+                onClick: function(){} // Callback after click
+              }).showToast();
         });
     
         var communes = [
